--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ background-color:green;
 }
    @media screen and (max-width: 600px) {
 #input{
-width:95%;
+width:98%;
+height:300px;
 }
 input{
 margin:1%;
 font-size:14px;
-width:90%;
+width:95%;
 }
 textarea{
 margin:1%;
