--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
     <html>
       <head>
         <style>h1{
@@ -9,10 +9,10 @@
 }
 #input{
 padding:10px;
-height:270px;
+height:300px;
 fontSize:18px;
 margin:10px auto;
-width:500px;
+width:50%;
 display:flex;
 flex-wrap:wrap;
 flex-direction:column;
@@ -43,7 +43,7 @@ background-color:green;
    @media screen and (max-width: 600px) {
 #input{
 width:98%;
-height:300px;
+height:50vh;
 }
 input{
 margin:1%;
