--- a/index.html
+++ b/index.html
@@ -7,55 +7,52 @@
     text-align:center;
 
 }
-#input{
-padding:10px;
-height:300px;
-fontSize:18px;
-margin:10px auto;
-width:50%;
-display:flex;
-flex-wrap:wrap;
-flex-direction:column;
-background-color:gray;
-border-radius:4px;
-border:none;
+#input {
+  padding: 10px;
+  margin: 10px auto;
+  width: 50%;
+  background-color: gray;
+  border-radius: 4px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* add spacing instead of wrap */
+}
 
+input {
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
 }
-input{
-margin:10px 5px;
-font-size:18px;
-height:20px;
-border-radius:4px;
-border:none;
+
+textarea {
+  min-height: 120px; /* make textarea larger */
+  font-size: 16px;
+  padding: 10px;
 }
-textarea{
-height:45%;
+
+button {
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: none;
+  background-color: green;
 }
-button{
-color:white;
-width:100px;
-margin:auto;
-font-size:18px;
-border-radius:4px;
-border:none;
-background-color:green;
+
+/* 📱 Mobile adjustments */
+@media screen and (max-width: 600px) {
+  #input {
+    width: 95%;
+    height: auto; /* remove fixed height */
+  }
+  input, textarea, button {
+    width: 100%; /* take full width */
+    font-size: 16px;
+  }
 }
-   @media screen and (max-width: 600px) {
-#input{
-width:98%;
-height:50vh;
-}
-input{
-margin:1%;
-font-size:14px;
-width:95%;
-}
-textarea{
-margin:1%;
-font-size:14px;
-width:90%;
-}  
-}   </style>
+  </style>
       </head>
       <body>
         <h1>Text Repeater</h1>
