--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ button {
 /* 📱 Mobile adjustments */
 @media screen and (max-width: 600px) {
   #input {
-    width: 95%;
+    width: 95% !important;
     height: auto; /* remove fixed height */
   }
   input, textarea, button {
