--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
     <html>
       <head>
+          <title>Text Repeater</title>
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <style>h1{
     color:green;
     margin: 18px auto;
@@ -38,6 +41,7 @@ button {
   font-size: 16px;
   border-radius: 4px;
   border: none;
+  width:100px;
   background-color: green;
 }
 
@@ -47,7 +51,7 @@ button {
     width: 95% !important;
     height: auto; /* remove fixed height */
   }
-  input, textarea, button {
+  input, textarea {
     width: 100%; /* take full width */
     font-size: 16px;
   }
