--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       }
 
       button {
+        margin:auto;
         color: white;
         padding: 10px;
         font-size: 16px;
@@ -48,11 +49,11 @@
       /* 📱 Mobile adjustments */
       @media screen and (max-width: 600px) {
         #input {
-          width: 95% !important;
+          width: 97% !important;
           height: auto;
         }
         input, textarea, button {
-          width: 100%; /* ✅ buttons also full width */
+          width: 95%; /* ✅ buttons also full width */
           font-size: 16px;
         }
       }
